@@ -3,6 +3,9 @@ libdebian-installer (0.63) UNRELEASED; urgency=low
   [ Michael Casadevall ]
   * Add subarchitecture imx51 for Freescale iMX51 SoCs (LP: #345534).
 
+  [ Colin Watson ]
+  * Fix memory leak in subarch-x86-linux.c:di_system_subarch_analyze.
+
  -- Colin Watson <cjwatson@debian.org>  Tue, 28 Apr 2009 11:38:05 +0100
 
 libdebian-installer (0.62) unstable; urgency=low
